lang is actually langing